Fix can food image size on tablet and desktop

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -41,6 +41,7 @@
 
   @include md-size {
     position: static;
+    width: 709px;
     margin-top: -79px;
   }
 
@@ -49,6 +50,7 @@
     top: 30px;
     right: 258px;
     left: auto;
+    width: 552px;
     margin: 0;
   }
 }
